# ml-job-matching-pipeline

./: .gitignore  Makefile  README.md  README.ml-job-matching-pipeline.md  pyproject.toml  requirements.txt
docs/: README.md  mkdocs.yml
docs/docs/: getting-started.md  index.md
job_market_intelligence/: __init__.py  config.py  dataset.py  features.py  plots.py
job_market_intelligence/modeling/: predict.py  train.py
ml-job-matching-pipeline/: Makefile  README.md  pyproject.toml
ml-job-matching-pipeline/docs/: mkdocs.yml
ml-job-matching-pipeline/docs/docs/: index.md
ml-job-matching-pipeline/job_market_intelligence/: __init__.py  dataset.py  features.py  plots.py
ml-job-matching-pipeline/job_market_intelligence/modeling/: predict.py  train.py
tests/: test_data.py
