```plaintext
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "job_market_intelligence"
version = "0.0.1"
description = "Data Science end-to-end project with EDA analysis on a LinkedIn Job Board set of 100K Postings"
authors = [
  { name = "Mark Phouiphiphath" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["job_market_intelligence"]
include = ["pyproject.toml", "job_market_intelligence/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["job_market_intelligence"]
force-sort-within-sections = true


```
